--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   modal_bottom_sheet: ^2.0.0
   provider: ^6.0.1
+  firebase_core: ^1.9.0
+  firebase_auth: ^3.2.0
+  loading_overlay: ^0.3.0
+  animated_text_kit: ^4.2.1
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^1.3.1
 
 dev_dependencies:
   flutter_test:
@@ -58,3 +64,16 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/images/
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png"
+
+flutter_native_splash:
+  color: "#6BB5B6"
+  image: "assets/images/icon.png"
