--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^1.3.1
+  cloud_firestore: ^3.1.0
 
 dev_dependencies:
   flutter_test:
