--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^1.3.1
   cloud_firestore: ^3.1.0
+  username_generator: ^1.3.0
 
 dev_dependencies:
   flutter_test:
