--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   flutter_native_splash: ^1.3.1
   cloud_firestore: ^3.1.0
   username_generator: ^1.3.0
+  timeago: ^3.1.0
+  jiffy: ^4.1.0
 
 dev_dependencies:
   flutter_test:
