--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^3.1.0
   username_generator: ^1.3.0
   jiffy: ^4.1.0
+  flutter_bloc: ^8.0.0
 
 dev_dependencies:
   flutter_test:
