--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   username_generator: ^1.3.0
   jiffy: ^4.1.0
   flutter_bloc: ^8.0.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
