--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,11 @@ dependencies:
   jiffy: ^5.0.0
   flutter_bloc: ^8.0.0
   fluttertoast: ^8.0.8
+  equatable: ^2.0.3
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
