--- a/packages/firestore_pantry_api/pubspec.yaml
+++ b/packages/firestore_pantry_api/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_core: ^1.5.0
   meta: ^1.3.0
   rxdart: ^0.27.2
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
