--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
     path: packages/pantry_repository
   firestore_pantry_api:
     path: packages/firestore_pantry_api
+  food_dictionary_repository:
+    path: packages/food_dictionary_repository
   flow_builder: ^0.0.6
   font_awesome_flutter: ^9.2.0
 
@@ -82,6 +84,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/google/
+    - assets/data/
 
 
 flutter_icons:
