--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.2+4
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -29,10 +29,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   modal_bottom_sheet: ^2.0.0
   firebase_core: ^1.9.0
@@ -56,6 +52,9 @@ dependencies:
     path: packages/food_dictionary_repository
   flow_builder: ^0.0.6
   font_awesome_flutter: ^9.2.0
+  firebase_analytics: ^9.1.2
+  mocktail: ^0.3.0
+  bloc_test: ^9.0.3
 
 dev_dependencies:
   integration_test:
@@ -85,6 +84,11 @@ flutter:
     - assets/images/
     - assets/images/google/
     - assets/data/
+
+  fonts:
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/Nunito-Regular.ttf
 
 
 flutter_icons:
