--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   firebase_analytics: ^9.1.2
   mocktail: ^0.3.0
   bloc_test: ^9.0.3
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   integration_test:
