Refactor firestore_pantry_api and fix bugs in edit pantry screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,6 @@ dependencies:
   flow_builder: ^0.0.6
   font_awesome_flutter: ^9.2.0
   firebase_analytics: ^9.1.2
-  mocktail: ^0.3.0
-  bloc_test: ^9.0.3
   url_launcher: ^6.0.20
 
 dev_dependencies:
@@ -63,6 +61,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.4
+  mocktail: ^0.3.0
+  bloc_test: ^9.0.3
+  fake_cloud_firestore: ^1.2.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
