--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   firebase_analytics: ^9.1.2
   url_launcher: ^6.0.20
+  flutter_typeahead: ^3.2.5
 
 dev_dependencies:
   integration_test:
